--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-langits-bg h-full">
 <head>
   <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="data:image/svg">
   <title>Visualize your most-used programming languages in your Github repos with Langits.</title>
   <link rel="stylesheet" href="./styles/styles.min.css">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Visualize your most-used programming languages in your Github repos with Langits." />
 </head>
-<body>
-  <h1>Langits</h1>
-  <p>Visualize your most-used programming languages in your GitHub repos.</p>
-  <form id="form" action="" onsubmit="">
-    <div>
-      <label>
-        Enter your Github username:
-        <input type="text" placeholder="username"/>
-      </label>
+<body class="font-firaSans text-langits-black text-lg md:text-xl flex flex-col h-full">
+  <header class="pt-12 mb-16">
+    <div class="container">
+      <h1 class="text-5xl md:text-6xl font-bold mb-3">
+        <svg viewBox="0 0 64 64" class="inline-block align-bottom w-[54px] md:w-[64px]"><g style="fill-rule:evenodd;clip-rule:evenodd;fill:#3572A5;stroke:#333333;stroke-width:2;stroke-miterlimit:1.5;stroke-linecap:round;stroke-linejoin:round;"><path d="M31.9876 1.28879C15.0331 1.28879 1.28882 15.0331 1.28882 31.9875C1.28882 46.0126 10.7939 58.2544 24.3817 61.7292L28.1846 46.8584C21.3907 45.121 16.6382 39.0001 16.6382 31.9875C16.6382 23.5103 23.5103 16.6382 31.9876 16.6382V1.28879Z"/></g><g style="fill-rule:evenodd;clip-rule:evenodd;fill:#C6538C;stroke:#333333;stroke-width:2;stroke-miterlimit:1.5;stroke-linecap:round;stroke-linejoin:round;"><path d="M59.81 19.012C54.768 8.20031 43.918 1.28879 31.9875 1.28879V16.6367C37.9528 16.6367 43.3778 20.0924 45.8988 25.4983L59.81 19.012Z"/></g><g style="fill-rule:evenodd;clip-rule:evenodd;fill:#F1E05A;stroke:#333333;stroke-width:2;stroke-miterlimit:1.5;stroke-linecap:round;stroke-linejoin:round;"><path d="M24.0422 61.6403C40.419 66.0284 57.2522 56.3097 61.6404 39.933C63.7477 32.0686 62.6445 23.6892 58.5736 16.6382L45.2807 24.3129C47.3161 27.8384 47.8677 32.0281 46.8141 35.9603C44.62 44.1486 36.2034 49.008 28.015 46.8139L24.0423 61.6403H24.0422Z"/></g></svg>
+        Langits
+      </h1>
+      <p class="text-xl md:text-2xl">Visualize your most-used programming languages in your GitHub repos.</p>
     </div>
-    <div>
-      <button type="submit">Submit</button>
-    </div>
-  </form>
-  <p id="message"></p>
-  <div style="width: 600px; max-width: 100%; margin: 40px auto;">
-    <canvas id="langitsDonut"></canvas>
-  </div>
-  <div id="langitsTable"></div>
+  </header>
+  <main class="grow">
+    <section class="container">
+      <form id="form" action="" onsubmit="">
+        <div>
+          <label>
+            Enter your Github username:
+            <input type="text" placeholder="username" class="px-3 py-1 border-2 border-langits-black"/>
+          </label>
+        </div>
+        <div>
+          <button type="submit" class="bg-langits-blue mt-2 mb-7 px-5 py-1 text-langits-white border-2 border-langits-black">Submit</button>
+        </div>
+      </form>
+      <p id="message"></p>
+      <div style="width: 600px; max-width: 100%; margin: 40px auto;">
+        <canvas id="langitsDonut"></canvas>
+      </div>
+      <div id="langitsTable"></div>
+    </section>
+  </main>
+  <footer class="py-8 container">
+    <p class="text-center text-xl md:text-2xl">Made by Dave <a class="inline align-text-bottom" href="https://github.com/SirDaev/" target="_blank"><img class="inline-block w-7 md:w-9" alt="Github" src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3e%3cpath d='M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z' fill='%233572A5'/%3e%3c/svg%3e"></a></p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="text/javascript">
     const message = document.getElementById("message");
@@ -144,7 +159,8 @@
         options: {
           elements: {
             arc: {
-              borderWidth: 3
+              borderWidth: 2,
+              borderColor: '#333'
             }
           }
         }
