Break up sections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <main class="grow">
-    <section class="container">
+    <section id="user-input" class="container">
       <form id="form" action="" onsubmit="">
         <div>
           <label>
@@ -32,6 +32,8 @@
         </div>
       </form>
       <p id="message"></p>
+    </section>
+    <section id="data-display" class="container">
       <div style="width: 600px; max-width: 100%; margin: 40px auto;">
         <canvas id="langitsDonut"></canvas>
       </div>
