--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en" class="bg-langits-bg h-full">
 <head>
   <meta charset="UTF-8" />
+  <meta name="theme-color" content="#F0EDF3">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="langits">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Visualize your most-used programming languages in your Github repos with Langits.">
+  <meta property="og:locale" content="en">
+  <meta property="https://langits.davejudd.dev" content="og:url">
+  <link rel="canonical" href="https://langits.davejudd.dev">
+  <meta name="description"
+    content="This page provides visualization of the programming languages used in a given user's public github repositories.">
+  <meta property="og:description"
+    content="This page provides visualization of the programming languages used in a given user's public github repositories.">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/daev/image/upload/v1682564365/langits/_og/langits-og_o3bvux.png">
   <link rel="shortcut icon" href="data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M31.9876 1.28879C15.0331 1.28879 1.28882 15.0331 1.28882 31.9875C1.28882 46.0126 10.7939 58.2544 24.3817 61.7292L28.1846 46.8584C21.3907 45.121 16.6382 39.0001 16.6382 31.9875C16.6382 23.5103 23.5103 16.6382 31.9876 16.6382V1.28879Z' fill='%233178C6' stroke='%23333333' stroke-width='2' stroke-miterlimit='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M59.81 19.012C54.768 8.20031 43.918 1.28879 31.9875 1.28879V16.6367C37.9528 16.6367 43.3778 20.0924 45.8988 25.4983L59.81 19.012Z' fill='%23C6538C' stroke='%23333333' stroke-width='2' stroke-miterlimit='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M24.0422 61.6403C40.419 66.0284 57.2522 56.3097 61.6404 39.933C63.7477 32.0686 62.6445 23.6892 58.5736 16.6382L45.2807 24.3129C47.3161 27.8384 47.8677 32.0281 46.8141 35.9603C44.62 44.1486 36.2034 49.008 28.015 46.8139L24.0423 61.6403H24.0422Z' fill='%23F1E05A' stroke='%23333333' stroke-width='2' stroke-miterlimit='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A">
   <title>Visualize your most-used programming languages in your Github repos with Langits.</title>
   <link rel="stylesheet" href="./styles/styles.min.css">
